autoload aw3b classes

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     },
     "autoload": {
         "psr-4": {
-            "": "vendor\\aw3b\\php-classes\\src"
+            "Awtresb\\": "vendor\\aw3b\\php-classes\\src"
         }
     }
 }
